fixes two typos

--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \newcommand{\Z}{\mathbb Z}
 \renewcommand{\S}{\mathbb S}
 \newcommand{\F}{\mathbb F}
-\newcommand{\G}{\mathbb G}
+\newcommand{\G}{\widehat{\mathbb G}}
 \newcommand{\R}{\mathbb R}
 \newcommand{\RP}{\R\mathrm P}
 \newcommand{\C}{\mathbb{C}}
@@ -400,7 +400,7 @@ Applying linear-algebraic duality to this bottom map gives a coaction map \[\lam
 (\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) & \text{(coaction)} \\
 (\lambda^* \otimes \id) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^i} \otimes \xi_i \right)^{2^j} \otimes \xi_j & = & \text{(ring homomorphism)} \\
-\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = & \text{(Freshman's dream)} \\
+\sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = & \text{(characteristic $2$)} \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (\id \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
 \end{align*}
