--- a/main.tex
+++ b/main.tex
@@ -301,6 +301,8 @@ The symbol ``$\mathbb A^1$'' is pronounced ``the affine line''.  Note that the q
 \end{example}
 
 \todo{Talk more about subobjects?  Say what a closed subscheme of an affine scheme is?}
+\todo{Talk about how maps to $\mathbb A^1$ gives an inverse to $\Spec$.}
+\todo{Note that $\mathbb G_m$ includes into both $\mathbb A^2$ and $\mathbb A^1$.}
 
 We can also express in this language another common object in algebraic topology: the Hopf algebra, which arises when taking the mod--$2$ cohomology of an $H$--space.  In addition to the usual cohomology, the extra pieces of data are those induced by the $H$--space multiplication and unit map, which on cohomology beget a diagonal map $\Delta$ and an antipode map $\chi$.  Running through the axioms, one quickly checks the following:
 \begin{lemma}
@@ -363,39 +365,31 @@ and hence it takes the form \[\Delta(x) = x_1 + x_2.\]  Noticing that this is ex
 \section{Feb 1: The Steenrod algebra}
 
 
-We left off yesterday complaining that our definition was only made for finite complexes, and that this was getting in the way of a nice theorem.  However, had we naively defined $X_{H\F_2}$ for infinite complexes $X$, we would have quickly seen that the target category of this construction is somewhat too lax to be truly useful, and we would have gotten ``the wrong answer'' for several $X$.  Without going into detail yet about the bad examples we're trying to avoid, here are the deficiencies we will work toward fixing, some quickly and some slowly:
+We left off yesterday complaining that our definition was only made for finite complexes, and that this was getting in the way of a nice theorem.  However, had we naively defined $X_{H\F_2}$ for infinite complexes $X$, we would have quickly seen that we would have gotten ``the wrong answer'' for several $X$.  Without going into detail yet about the bad examples we're trying to avoid, it will turn out that we can fix them by rigidifying the target category somewhat.  Here are the extra structures we will work toward incorporating, some quickly and some slowly:
 \begin{enumerate}
-\item \label{GradingDeficiency} Cohomology rings are \emph{graded}, and maps of spaces respect this grading.
-\item \label{SteenrodDeficiency} Cohomology rings receive an action of the Steenrod algebra, and maps of spaces respect this action.
-\item \label{InfiniteCplxDeficiency} Both of these are complicated further when taking the cohomology of an infinite complex.
+\item Cohomology rings are \emph{graded}, and maps of spaces respect this grading.
+\item Cohomology rings receive an action of the Steenrod algebra, and maps of spaces respect this action.
+\item Both of these are complicated further when taking the cohomology of an infinite complex.
 \item \label{SkewCommutativeDeficiency} (Cohomology rings for more elaborate cohomology theories are only skew-commutative, but ``$\Spec$'' requires a commutative input.)
 \end{enumerate}
-Today we will fix all these deficiencies except for deficiency \ref{SkewCommutativeDeficiency}, which doesn't matter with mod--$2$ coefficients but which will be something of a bugbear throughout the rest of the semester.
+Today we will fix all these deficiencies of $X_{H\F_2}$ except for \#\ref{SkewCommutativeDeficiency}, which doesn't matter with mod--$2$ coefficients but which will be something of a bugbear throughout the rest of the semester.
 
+Let's begin by considering the grading on $H\F_2^* X$.  There is a standard construction in algebraic geometry that tracks gradings, which we now recall:
 
------- THINGS BELOW THIS LINE ARE JUMBLED ------
+\begin{definition}\todo{Cite: Strickland FSFG, Defn 2.95.}
+A \textit{grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f: R \to S$ of graded rings is said to be \textit{homogeneous} or to \textit{respect the grading} if $f(R_k) \subseteq S_k$.
+\end{definition}
 
-Let's begin with deficiency \ref{GradingDeficiency}.  There is a standard construction in algebraic geometry that tracks gradings:
-\begin{lemma}\todo{Cite this: Strickland FSFG, Prop 2.96.}
-A graded ring $R$ is equivalent data to an affine scheme $\Spec R$ with an action by $\mathbb G_m$.
+\begin{lemma}\label{GradedAndGmEquivAgree}\todo{Cite this: Strickland FSFG, Prop 2.96.}
+A graded ring $R$ is equivalent data to an affine scheme $\Spec R$ with an action by $\mathbb G_m$.  Additionally, a map $R \to S$ is homogeneous exactly when the induced map $\Spec S \to \Spec R$ is $\mathbb G_m$--equivariant.
 \end{lemma}
 \begin{proof}
-\todo{Write this out more fully; see the above citation.} The action map $\mathbb G_m \times \Spec R \to \Spec R$ is equivalent to a ring map $R \to R[u^\pm]$.  Send homogeneous elements $r \in R$ of degree $n$ to $u^{-n} R$ and extend linearly.
+A $\mathbb G_m$--action on $\Spec R$ is equivalent data to a coaction map $\alpha^*: R \to R \otimes \F_2[x^\pm]$.  Define $R_k$ to be those points in $r$ satisfying $\alpha^* r = r \otimes x^k$.  It is clear that we have $1 \in R_0$ and that $R_j R_k \subseteq R_{j+k}$.  To see that $R = \bigoplus_k R_k$, note that every tensor can be written as a sum of pure tensors.  Conversely, given a graded ring $R$, define the coaction map on $R_k$ by \[(r_k \in R_k) \mapsto x^k r_k\] and extend linearly.
 \end{proof}
-\noindent The analogous operation in algebraic topology is to replace $H\F_2$ by the periodified spectrum $H\F_2P = \bigvee_{j=-\infty}^\infty \Susp^j H\F_2$ with coefficient ring $\pi_* H\F_2P = \F_2[u^\pm]$.  A cohomology class $\omega \in H\F_2^n(X)$ is represented in periodified cohomology by the de-scaled class $u^{-n} \omega \in H\F_2P^0(X)$.\todo{This is really lacking substance. You actually do get a coaction by using $\xi_0^\pm \in \mathcal A_*P$.}
 
+This notion from algebraic geometry is somewhat different from what we are used to in algebraic topology, as it is designed to deal with things like polynomial rings, but in classical algebraic topology we only ever encounter homogeneous sums.  We can modify our perspectively very slightly to arrive at the algebraic geometers': replace $H\F_2$ by the periodified spectrum \[H\F_2P = \bigvee_{j=-\infty}^\infty \Susp^j H\F_2.\]  This spectrum has the property that $H\F_2P^0(X)$ is isomorphic to $H\F_2^*(X)$ as ungraded rings, but now we can make sense of the sum of two classes which used to live in different $H\F_2$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ so that we are in the situation of \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
 
-
-
-
-In an attempt to resolve deficiency \ref{SteenrodDeficiency} from last time, we now consider the action of the Steenrod algebra on cohomology rings.  Naively approached, this does not fit into the framework we've been sketching so far: the Steenrod algebra is a noncommutative algebra, and so the action map \[\mathcal A^* \otimes H\F_2P^0 X \to H\F_2P^0 X\] will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, since the Cartan formula on $\mathcal A^*$ is evidently cocommutative.  Second, if $X$ is a \emph{finite} complex, then applying Spanier--Whitehead duality gives rise to the following map:
-\begin{center}
-\begin{tikzcd}
-\mathcal A^* \otimes H\F_2P^0 DX \arrow{r} \arrow[-,double]{d} & H\F_2P^0 DX \arrow[-,double]{d} \\
-\mathcal A^* \otimes H\F_2P_0 X \arrow{r} & H\F_2P_0 X.
-\end{tikzcd}
-\end{center}
-Applying linear-algebraic duality to this bottom map gives a coaction map \[\lambda^*: H\F_2P^0 X \to H\F_2P^0 X \otimes \mathcal A_*,\] which we will re-re-interpret as an action map \[\alpha: \Spec \mathcal A_* \times X_{H\F_2} \to X_{H\F_2}.\]  Milnor works out the Hopf algebra structure of $\mathcal A_*$, by defining elements $\xi_j \in \mathcal A_*$ dual to $\Sq^{2^{j-1}} \cdots \Sq^{2^0} \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in H\F_2^1 \RP^n$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j.\]  Notice that these formulas stabilize as $n$ grows.  He then makes the following calculation, stable in $n$:
+Our route to finding this natural $\alpha^*$ is by turning to the next extra structure: the action of the Steenrod algebra.  Naively approached, this does not fit into the framework we've been sketching so far: the Steenrod algebra is a noncommutative algebra, and so the action map \[\mathcal A^* \otimes H\F_2^* X \to H\F_2^* X\] will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, since the Cartan formula expressing the diagonal on $\mathcal A^*$ is evidently symmetric.  Second, if $X$ is a \emph{finite} complex, then tinkering with Spanier--Whitehead duality gives rise to a map: \[\mathcal A^* \otimes (H\F_2)_* X \to (H\F_2)_* X.\]  Applying linear-algebraic duality to this bottom map allows us to reinterpret this as a coaction map \[\lambda^*: H\F_2^* X \to H\F_2^* X \otimes \mathcal A_*,\] which we will then re-re-interpret as an action map \[\alpha: \Spec \mathcal A_* \times X_{H\F_2} \to X_{H\F_2}.\]  Milnor works out the Hopf algebra structure of $\mathcal A_*$, by defining elements $\xi_j \in \mathcal A_*$ dual to $\Sq^{2^{j-1}} \cdots \Sq^{2^0} \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in H\F_2^1(\RP^n)$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j.\]  Notice that we can take the limit $n \to \infty$ if we aren't afraid of infinite sums.  He then makes the following calculation, stable in $n$:
 \begin{align*}
 (\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) & \text{(coaction)} \\
 (\lambda^* \otimes \id) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
@@ -404,41 +398,51 @@ Applying linear-algebraic duality to this bottom map gives a coaction map \[\lam
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = (\id \otimes \Delta) \left( \sum_{m=0}^\infty x^{2^m} \otimes \xi_m \right) \\
 \sum_{j=0}^\infty \left( \sum_{i=0}^\infty x^{2^{i+j}} \otimes \xi_i^{2^j} \right) \otimes \xi_j & = \sum_{m=0}^\infty x^{2^m} \otimes \Delta(\xi_m),
 \end{align*}
-from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi_j.\]
+from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi_j.\]  Finally, Milnor shows that this is the complete story:
 \begin{theorem}[Milnor]
 $\mathcal A_* = \F_2[\xi_1, \xi_2, \ldots, \xi_j, \ldots]$.
 \end{theorem}
-\begin{proof}
+\begin{proof}[Flippant proof]
 Milnor counts how many elements he has produced, compares against how many Adem and Cartan found, and sees that he has exactly enough.
 \end{proof}
 
-To study this in terms of algebraic geometry, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time.  With that in mind, here is one such description.  Recall the multiplication map \[\RP^\infty_{H\F_2} \times \RP^\infty_{H\F_2} \to \RP^\infty_{H\F_2}.\]  Since this map is induced by a map of spaces, it is equivariant for the action by the group scheme $\Spec \mathcal A_*$.  Since the action on the left is diagonal, we deduce the formula $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.
+We are now in a position to uncover the desired map $\alpha^*$ desired earlier.  Suppose that we were interested in re-telling Milnor's story with $H\F_2P$ in place of $H\F_2$.  The dual Steenrod algebra is defined by \[\mathcal A_* := \pi_*(H\F_2 \sm H\F_2),\] which we replace by \[\mathcal AP_0 := \pi_0 (H\F_2 P \sm H\F_2 P) = H\F_2P_0(H\F_2) = \mathcal A_*[\xi_0^\pm].\]  Restricting to the quotient Hopf algebra $\mathcal AP_0 \to \F_2[\xi_0^\pm]$ gives exactly the coaction map $\alpha^*$.
+
+To study the rest of $\mathcal AP_0$ in terms of algebraic geometry, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[H\F_2^* \RP^\infty \otimes H\F_2^* \RP^\infty \leftarrow H\F_2^* \RP^\infty.\]  Taking a colimit over finite complexes, we produce an coaction of $\mathcal A_*$, and since the map above comes from a map of spaces, it is equivariant for the coaction.  Since the action on the left is diagonal, we deduce the formula \[\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2).\]
 
 \begin{lemma}
-The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The functor $\Spec \mathcal A_*$ assigns to a test $\F_2$--algebra $T$ the set of power series $f$ satisfying $f(x_1 + x_2) = f(x_1) + f(x_2)$.\todo{Mention how $\mathbb G_m$ acts: that series expression has character $1$.} \qed
+The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The value $(\Spec \mathcal AP_0)(T)$ is the set of power series $f$ with coefficients in $T$ satisfying \[f(x_1 + x_2) = f(x_1) + f(x_2). \qed\]
 \end{lemma}
 
-\todo{Really talk about formal schemes here, now that this is a separate lecture.} We close our discussion by codifying what Milnor did when he stabilized against $n$.  Each $\RP^n_{H\F_2}$ is a finite affine scheme, and to make sense of the object $\RP^\infty_{H\F_2}$ Milnor's technique was to consider the ind-system $\{\RP^n_{H\F_2}\}_{n=0}^\infty$ of finite affine schemes, itself called a \textit{formal scheme}.  We will follow this technique ourselves to resolve deficiency \ref{InfiniteCplxDeficiency}:
+We close our discussion by codifying what Milnor did when he stabilized against $n$.  Each $\RP^n_{H\F_2}$ is a finite affine scheme, and to make sense of the object $\RP^\infty_{H\F_2}$ Milnor's technique was to consider the ind-system $\{\RP^n_{H\F_2}\}_{n=0}^\infty$ of finite affine schemes.  We give a name to these sorts of objects:\todo{Maybe move formal schemes into the previous lecture and talk about completions too?}
+\begin{definition}
+An \textit{affine formal scheme} is an ind-system of finite affine schemes.
+\end{definition}
+\noindent We will follow this technique ourselves to handle general infinite complexes:
 \begin{definition}
 When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{H\F_2}$ to be the ind-system $\{X^{(n)}_{H\F_2}\}_{n=0}^\infty$ of finite schemes.
 \end{definition}
-\noindent This choice has several consequences.  First, it clarifies the above example:
-\begin{example}[{(cf. \Cref{RPExampleFaulty})}]\label{RPinftyExampleForReal}
-Write $\G_a$ for the ind-system $\mathbb A^{1, (n)}$ with the group scheme structure given in \Cref{RPExampleFaulty}.  This is the group scheme of all nilpotent elements, noting that the sum of two nilpotent elements of orders $n$ and $m$ is guaranteed to itself be nilpotent with order at most $n+m$.  (Note that this is also reflected by a skeletal factorization of the multiplication map on $\RP^\infty$ as $\RP^n \times \RP^m \to \RP^{n+m}$.)  As group schemes, we have calculated \[\RP^\infty_{H\F_2} \cong \G_a.\]
+
+This choice clarifies the example from last time:
+\begin{example}[{cf. \Cref{RPExampleFaulty}}]\label{RPinftyExampleForReal}
+Write $\G_a$ for the ind-system $\mathbb A^{1, (n)}$ with the group scheme structure given in \Cref{RPExampleFaulty}.  That this group scheme structure filters this way is a simultaneous reflection of two facts:
+\begin{enumerate}
+\item $\G_a(T)$ consists of all nilpotent elements in $T$.  The sum of two nilpotent elements of orders $n$ and $m$ is guaranteed to itself be nilpotent with order at most $n+m$.
+\item There is a skeletal factorization of the multiplication map on $\RP^\infty$ as $\RP^n \times \RP^m \to \RP^{n+m}$ purely for dimensional reasons.\todo{Is there an off-by-one here?}
+\end{enumerate}
+As group schemes, we have calculated \[\RP^\infty_{H\F_2} \cong \G_a.\]
 \end{example}
-\noindent Second, note that the following morphism sets are very different:\todo{This is sloppily stated. You're really complaining about a distinction between the morphism schemes.}
+
+Additionally, this choice allows us to give a name to $\Spec \mathcal AP_0$.  Note that the following morphism sets are very different:
 \begin{align*}
 \CatOf{GroupSchemes}_{\F_2/}(\mathbb G_a, \mathbb G_a) & \cong \CatOf{HopfAlgebras}_{\F_2/}(\F_2[x], \F_2[x]) \\
 \CatOf{FormalGroups}_{\F_2/}(\G_a, \G_a) & \cong \CatOf{HopfProAlgebras}_{\F_2/}(\F_2\llbracket x \rrbracket, \F_2\llbracket x \rrbracket).
 \end{align*}
-The former is populated by polynomials and the latter is populated by power series.  Since our description of $\Spec \mathcal A_*$ involves power series, it follows that the correct name for this scheme is \[\Spec \mathcal A_* \cong \underline{\Aut}(\G_a).\]
+The former is populated by polynomials satisfying the homomorphism condition and the latter is populated by power series satisfying the homomorphism condition.  Since our description of $\Spec \mathcal AP_0$ involves power series, we can amp up this observation to a scheme: \[\underline{\operatorname{Hom}}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}\] and conclude that the correct name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \underline{\Aut}(\G_a).\]
 
-Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that this language of formal schemes has a very good compression ratio: you can fit a lot of information into a very tiny space.  This formula simultaneously embodies its cohomology ring, its diagonal, and how the dual Steenrod algebra coacts.
+Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that this language of formal schemes has an extremely good compression ratio: you can fit a lot of information into a very tiny space.  This formula simultaneously embodies the cohomology ring of $\RP^\infty$, its diagonal, and how the dual Steenrod algebra coacts.
 
 \todo{Include a recursive formula for the antipode map, coming from power series inversion.}
-
-
-
 
 
 
@@ -457,7 +461,7 @@ identification of the $E_2$ page: $\Ext$ in the category of comodules
 
 Example: $\Ext$ in comodules for the group algebra agrees with group cohomology
 
-reinterpretation as $\Aut \widehat \G_a$--equivariant cohomology over $\Spec \F_2$
+reinterpretation as $\Aut \G_a$--equivariant cohomology over $\Spec \F_2$
 
 degenerate example: $H\F_2^{H\F_2}$
 
