--- a/main.tex
+++ b/main.tex
@@ -465,9 +465,47 @@ Finally, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out that 
 
 \section{Feb 3: The mod--$2$ Adams spectral sequence}
 
-The Adams spectral sequence
+Today we will construct an important classical tool: the Adams spectral sequence.  There are many ways to introduce this tool, but our approach will be to focus on how to get information out of the Hurewicz homomorphism.  \todo{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to.}Begin by considering the following three self-maps of the stable sphere:
+\begin{align*}
+\S^0 & \xrightarrow{0} \S^0, & \S^0 & \xrightarrow{1} \S^0, & \S^0 & \xrightarrow{2} \S^0.
+\end{align*}
+If we apply mod--$2$ cohomology to each line, the induced maps are
+\begin{align*}
+\F_2 & \xleftarrow{0} \F_2, & \F_2 & \xleftarrow{\id} \F_2, & \F_2 & \xleftarrow{0} \F_2.
+\end{align*}
+We see that mod--$2$ homology can immediately distinguish between the null map and the identity map just by its behavior on morphisms, but it can't so distinguish between the null map and the multiplication-by-$2$ map.  To try to distinguish these two, we use the only other tool available to us: cohomology theories send cofiber sequences to long exact sequences, and moreover the data of a map $f$ and the data of the inclusion map $\S^0 \to C(f)$ into its cone are equivalent in the stable category.  So, we trade our maps $0$ and $2$ for the following cofiber sequences:
+\begin{center}
+\begin{tikzcd}
+\S^0 \arrow{r} & C(0) \arrow{r} & \S^1, & \S^0 \arrow{r} & C(2) \arrow{r} & \S^1.
+\end{tikzcd}
+\end{center}
+Applying cohomology, these again appear to be the same:
+\begin{center}
+\begin{tikzcd}[column sep=1.0em]
+{[1]} & & \bullet & \arrow{l} \bullet & & \bullet & \arrow{l} \bullet \\
+{[0]} & \bullet & \arrow{l} \bullet & & \bullet & \arrow{l} \bullet \\
+& H\F_2^* \S^0 & \arrow{l} H\F_2^* C(0) & \arrow{l} H\F_2^* \S^1, & H\F_2^* \S^0 & \arrow{l} H\F_2^* C(2) & \arrow{l} H\F_2^* \S^1,
+\end{tikzcd}
+\end{center}
+where we have drawn a ``$\bullet$'' for a generator of an $\F_2$--vector space, graded vertically, and arrows indicating the behavior of each map.  However, if we enrich our picture with the data we discussed last time, we can finally see the difference.  Recall the topological equivalences \[C(0) \simeq \S^0 \vee \S^1, \quad C(2) \simeq \Susp^{-1} \RP^1.\]  In the two cases, the coaction map $\lambda^*$ is given by
+\begin{align*}
+\lambda^*: H\F_2^* C(0) & \to H\F_2^* C(0) \otimes \mathcal A_* & \lambda^*: H\F_2^* C(2) & \to H\F_2^* C(2) \\
+\lambda^*: e_0 & \mapsto e_0 \otimes 1 & \lambda^*: e_0 & \mapsto e_0 \otimes 1 + e_1 \otimes \xi_1 \\
+\lambda^*: e_1 & \mapsto e_1 \otimes 1, & \lambda^*: e_1 & \mapsto e_1 \otimes 1.
+\end{align*}
+We draw this into the diagram as
+\begin{center}
+\begin{tikzcd}[column sep=1.0em]
+{[1]} & & \bullet & \arrow{l} \bullet & & \bullet \arrow[-]{d} & \arrow{l} \bullet \\
+{[0]} & \bullet & \arrow{l} \bullet & & \bullet & \arrow{l} \bullet \\
+& H\F_2^* \S^0 & \arrow{l} H\F_2^* C(0) & \arrow{l} H\F_2^* \S^1, & H\F_2^* \S^0 & \arrow{l} H\F_2^* C(2) & \arrow{l} H\F_2^* \S^1,
+\end{tikzcd}
+\end{center}
+where the vertical line indicates the nontrivial coaction involving $\xi_1$.  We can now see what trading maps for cofiber sequences has bought us: mod--$2$ cohomology can distinguish the defining sequences for $C(0)$ and $C(2)$ by considering their induced extensions of comodules over $\mathcal A_*$.  The Adams spectral sequence, which we will presently construct, says that this process is in a certain sense \emph{exhaustive}.  It has the signature \[\Ext_{\mathcal A_*}^{*, *}(\F_2, \F_2) \Rightarrow (\pi_* \S^0)^\wedge_2,\] i.e., the $2$--primary component of the maps $\Susp^* \S^0 \to \S^0$ can be detected as a subquotient of all possible extensions of comodules over the dual Steenrod algebra.
 
-moral value: discerning $2$ from $0$ by $\Sq^1$
+
+
+
 
 by--hand construction with $H\F_2$--injective towers
 
@@ -599,7 +637,7 @@ Balmer's Spc functor
 
 
 \chapter{The Ravenel-Wilson calculations}
-\todo{This is a bad name.}
+\todo{This is a bad name.  Maybe ``Unstable cooperations''?}
 
 
 \section{The Ravenel-Wilson calculations}
